[project]
name = "xrl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "equinox>=0.13.2",
    "jax[cpu]>=0.6.2",
    "rlax>=0.1.7",
    "optax (>=0.2.6,<0.3.0)",
    "tqdm (>=4.67.1,<5.0.0)",
]

[dependency-groups]
dev = [
    "python-lsp-server>=1.14.0",
    "ruff>=0.14.9",
]
