[project]
name = "xrl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["jax[cpu] (>=0.8.2,<0.9.0)", "equinox (>=0.13.2,<0.14.0)", "optax (>=0.2.6,<0.3.0)", "tqdm (>=4.67.1,<5.0.0)", "distrax (>=0.1.7,<0.2.0)"]

[dependency-groups]
dev = ["python-lsp-server (>=1.14.0,<2.0.0)", "ruff (>=0.14.10,<0.15.0)", "mypy (>=1.19.1,<2.0.0)", "types-tqdm (>=4.67.0.20250809,<5.0.0.0)", "pyright[nodejs] (>=1.1.407,<2.0.0)", "ipython (>=9.8.0,<10.0.0)"]
